# Dualschlie-winkelmesser

./: .gitignore  README.md  pyproject.toml
tests/: test_zuendwickelmesser.py
zuendwinckelmesser/: engine.py  main.py
